--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -1,1 +1,55 @@
-<p>product-read works!</p>
+<!--<ul>
+    <li *ngFor="let product of products">
+        {{product.id}} => {{product.name}} => {{product.price}}
+    </li>
+</ul> -->
+
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="products">
+      <!-- Id Column -->
+      <ng-container matColumnDef="proId">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let row">{{row.proId}}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="proNome">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let row">{{row.proNome}}</td>
+      </ng-container>
+  
+      <!-- Price Column -->
+      <ng-container matColumnDef="proPrecoCusto">
+        <th mat-header-cell *matHeaderCellDef>Preço Custo</th>
+                                            <!--UTILIZAÇÃO DE PIPES-->
+        <td mat-cell *matCellDef="let row">{{row.proPrecoCusto | currency: 'BRL'}}</td>
+      </ng-container>
+
+       <!-- Price Column -->
+       <ng-container matColumnDef="proPrecoVenda">
+        <th mat-header-cell *matHeaderCellDef>Preço de Venda</th>
+                                            <!--UTILIZAÇÃO DE PIPES-->
+        <td mat-cell *matCellDef="let row">{{row.proPrecoVenda | currency: 'BRL'}}</td>
+      </ng-container>
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>                     
+        <td mat-cell *matCellDef="let row">
+            <a routerLink="/produtos/update/{{ row.proId }}" class="edit">
+                <i class="material-icons">
+                    edit
+                </i>
+            </a>
+            <a routerLink="/produtos/delete/{{ row.proId }}" class="delete"> 
+                <i class="material-icons">
+                    delete
+                </i>
+            </a>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
