--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -13,11 +13,17 @@
                 </i>
                 Produtos
             </a>
-            <a mat-list-item routerLink="/fornecedor">
+            <a mat-list-item routerLink="/fornecedores">
                 <i class="material-icons">
                     groups
                 </i>
                 Fornecedor
+            </a>
+            <a mat-list-item routerLink="/formaPagamento">
+                <i class="material-icons">
+                    list_alt
+                </i>
+                Pagamentos
             </a>
         </mat-nav-list>
     </mat-sidenav>
