--- a/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
+++ b/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
@@ -1,1 +1,52 @@
-<p>pagamento-read works!</p>
+<!--<ul>
+    <li *ngFor="let product of products">
+        {{product.id}} => {{product.name}} => {{product.price}}
+    </li>
+</ul> -->
+
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="pagamento">
+      <!-- Id Column -->
+      <ng-container matColumnDef="fpgId">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let row">{{row.fpgId}}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="fpgNome">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let row">{{row.fpgNome}}</td>
+      </ng-container>
+      <!-- Price Column -->
+      <ng-container matColumnDef="fpgPrice">
+        <th mat-header-cell *matHeaderCellDef>Preço</th>
+                                            <!--UTILIZAÇÃO DE PIPES-->
+        <td mat-cell *matCellDef="let row">{{row.fpgPrice | currency: 'BRL'}}</td>
+      </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="fpgDescricao">
+         <th mat-header-cell *matHeaderCellDef>Descrição</th>
+          <td mat-cell *matCellDef="let row">{{row.fpgDescricao}}</td>
+        </ng-container>
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>                     
+        <td mat-cell *matCellDef="let row">
+            <a routerLink="/formaPagamento/update/{{ row.proId }}" class="edit">
+                <i class="material-icons">
+                    edit
+                </i>
+            </a>
+            <a routerLink="/formaPagamento/delete/{{ row.proId }}" class="delete"> 
+                <i class="material-icons">
+                    delete
+                </i>
+            </a>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
