--- a/src/app/views/fornecedor-crud/fornecedor-crud.component.html
+++ b/src/app/views/fornecedor-crud/fornecedor-crud.component.html
@@ -1,1 +1,5 @@
-<p>fornecedor-crud works!</p>
+<button mat-raised-button (click)="navigateToFornecedorCreate()" color="primary">
+    Novo Fornecedor
+</button>
+
+<app-fornecedor-read></app-fornecedor-read>
