--- a/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
+++ b/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
@@ -14,7 +14,7 @@
   
       <!-- Name Column -->
       <ng-container matColumnDef="fpgNome">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
         <td mat-cell *matCellDef="let row">{{row.fpgNome}}</td>
       </ng-container>
       <!-- Price Column -->
