--- a/src/app/component/cliente/cliente-read/cliente-read.component.html
+++ b/src/app/component/cliente/cliente-read/cliente-read.component.html
@@ -1,1 +1,60 @@
-<p>cliente-read works!</p>
+<!--<ul>
+    <li *ngFor="let product of products">
+        {{product.id}} => {{product.name}} => {{product.price}}
+    </li>
+</ul> -->
+
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="cliente">
+      <!-- Id Column -->
+      <ng-container matColumnDef="cliId">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let row">{{row.cliId}}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="cliNome">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let row">{{row.cliNome}}</td>
+      </ng-container>
+      
+      <!-- Name Column -->
+      <ng-container matColumnDef="cliCpf">
+        <th mat-header-cell *matHeaderCellDef>CPF</th>
+        <td mat-cell *matCellDef="let row">{{row.cliCpf}}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="cliEmail">
+        <th mat-header-cell *matHeaderCellDef>E-mail</th>
+        <td mat-cell *matCellDef="let row">{{row.cliEmail}}</td>
+      </ng-container>
+
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="cliTelefone">
+        <th mat-header-cell *matHeaderCellDef>Telefone</th>
+        <td mat-cell *matCellDef="let row">{{row.cliTelefone}}</td>
+      </ng-container>
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>                     
+        <td mat-cell *matCellDef="let row">
+            <a routerLink="/clientes/update/{{ row.proId }}" class="edit">
+                <i class="material-icons">
+                    edit
+                </i>
+            </a>
+            <a routerLink="/clientes/delete/{{ row.proId }}" class="delete"> 
+                <i class="material-icons">
+                    delete
+                </i>
+            </a>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
