--- a/src/app/component/fornecedor/fornecedor-read/fornecedor-read.component.html
+++ b/src/app/component/fornecedor/fornecedor-read/fornecedor-read.component.html
@@ -1,1 +1,54 @@
-<p>fornecedor-read works!</p>
+<!--<ul>
+    <li *ngFor="let product of products">
+        {{product.id}} => {{product.name}} => {{product.price}}
+    </li>
+</ul> -->
+
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="fornecedor">
+      <!-- Id Column -->
+      <ng-container matColumnDef="forId">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let row">{{row.forId}}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="forNomeFantasia">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let row">{{row.forNomeFantasia}}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="forCnpj">
+        <th mat-header-cell *matHeaderCellDef>CNPJ</th>
+        <td mat-cell *matCellDef="let row">{{row.forCnpj}}</td>
+      </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="forRazaoSocial">
+            <th mat-header-cell *matHeaderCellDef>Razão Social</th>
+            <td mat-cell *matCellDef="let row">{{row.forRazaoSocial}}</td>
+          </ng-container>
+
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>                     
+        <td mat-cell *matCellDef="let row">
+            <a routerLink="/fornecedores/update/{{ row.proId }}" class="edit">
+                <i class="material-icons">
+                    edit
+                </i>
+            </a>
+            <a routerLink="/fornecedores/delete/{{ row.proId }}" class="delete"> 
+                <i class="material-icons">
+                    delete
+                </i>
+            </a>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
