--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -13,6 +13,12 @@
                 </i>
                 Produtos
             </a>
+            <a mat-list-item routerLink="/clientes">
+                <i class="material-icons">
+                    list_alt
+                </i>
+                Clientes
+            </a>
             <a mat-list-item routerLink="/fornecedores">
                 <i class="material-icons">
                     groups
