--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -7,21 +7,21 @@
                 </i>
                 Início
             </a>
+            <a mat-list-item routerLink="/clientes">
+                <i class="material-icons">
+                    groups
+                </i>
+                Clientes
+            </a>
             <a mat-list-item routerLink="/products">
                 <i class="material-icons">
                     storefront
                 </i>
                 Produtos
             </a>
-            <a mat-list-item routerLink="/clientes">
-                <i class="material-icons">
-                    list_alt
-                </i>
-                Clientes
-            </a>
             <a mat-list-item routerLink="/fornecedores">
                 <i class="material-icons">
-                    groups
+                    folder_shared
                 </i>
                 Fornecedor
             </a>
