--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -1,6 +1,6 @@
 
 <mat-toolbar class="header" met-elevation-z4>
-    <span>
+    <span class="title-group2">
         <a routerLink="/">
             <img class="logo" src="assets/img/logo-senai.png" alt="logo">
         </a>
@@ -8,7 +8,7 @@
     <span class="title-group">
         <a>
             <i class="material-icons">
-                home
+                dashboard
             </i>
             Inicio
         </a>
