--- a/src/app/component/template/nav/nav.component.css
+++ b/src/app/component/template/nav/nav.component.css
@@ -1,7 +1,12 @@
-.sidenav{
+/*.sidenav{
     background-color: #3F51B5;
     width: 200px;
+} */
+.sidenav {
+    background: linear-gradient(to bottom, #3F51B5, #2e3b86, #1e2a6e); 
+    width: 200px;
 }
+
 .sidenav a{
     color: #fff;
 }
