--- a/src/app/component/template/nav/nav.component.css
+++ b/src/app/component/template/nav/nav.component.css
@@ -18,3 +18,18 @@
     padding: 16px;
     background-color: #fff;
 }
+/*.imagem-grande {
+    width: 100%;
+    max-width: 1000px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 12px;
+  }
+
+  
+.image-container {
+    text-align: center;
+    margin-bottom: 16px;
+  }
+  */
+  
