--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,15 @@
 <mat-card class="home mat-elevation-z3">
-    <mat-card-title class="title">Bem vindo!</mat-card-title>
+
+ <mat-card-title class="title">Bem vindo!</mat-card-title>
     <mat-card-subtitle class="subtitle">
         Sistema para exemplificar a construção de um cadastro em Angular
     </mat-card-subtitle>
+
+</mat-card>
+<mat-card class="home2 mat-elevation-z3">
+
+    <div class="image-container">
+        <img src="assets/img/Image5.png" alt="Imagem de boas-vindas" class="imagem-grande">
+    </div>
+           
 </mat-card>
