--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -32,6 +32,54 @@
         <td mat-cell *matCellDef="let row">{{row.proPrecoVenda | currency: 'BRL'}}</td>
       </ng-container>
 
+      <!-- Name Column -->
+  <ng-container matColumnDef="quantidadeEstoque">
+    <th mat-header-cell *matHeaderCellDef>Quantidade de Estoque</th>
+    <td mat-cell *matCellDef="let row">{{row.quantidadeEstoque}}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="categoria">
+    <th mat-header-cell *matHeaderCellDef>Categoria</th>
+    <td mat-cell *matCellDef="let row">{{row.categoria}}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="codigoBarras">
+    <th mat-header-cell *matHeaderCellDef>Código Barras</th>
+    <td mat-cell *matCellDef="let row">{{row.codigoBarras}}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="marca">
+    <th mat-header-cell *matHeaderCellDef>Marca</th>
+    <td mat-cell *matCellDef="let row">{{row.marca}}</td>
+  </ng-container>
+  
+  <!-- Name Column -->
+  <ng-container matColumnDef="unidadeMedida">
+    <th mat-header-cell *matHeaderCellDef>Unidade de Medida</th>
+    <td mat-cell *matCellDef="let row">{{row.unidadeMedida}}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="ativo">
+    <th mat-header-cell *matHeaderCellDef>Ativo</th>
+    <td mat-cell *matCellDef="let row">{{row.ativo}}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="dataCadastro">
+    <th mat-header-cell *matHeaderCellDef>Data de Cadastro</th>
+    <td mat-cell *matCellDef="let row">{{row.dataCadastro}}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+<ng-container matColumnDef="dataAtualizacao">
+  <th mat-header-cell *matHeaderCellDef>Data de Atualização de dados</th>
+  <td mat-cell *matCellDef="let row">{{row.dataAtualizacao}}</td>
+</ng-container>
+
       <!-- Action Column -->
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Ações</th>                     
