--- a/src/app/component/product/product-delete/product-delete.component.html
+++ b/src/app/component/product/product-delete/product-delete.component.html
@@ -11,28 +11,28 @@
             <input matInput placeholder="Preço de venda (R$)" [value]="product.proPrecoVenda" name="proPrecoVenda" disabled>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.quantidadeEstoque" name="quantidadeEstoque">
+            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.quantidadeEstoque" name="quantidadeEstoque" disabled>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Categoria" [(ngModel)]="product.categoria" name="categoria">
+            <input matInput placeholder="Categoria" [(ngModel)]="product.categoria" name="categoria" disabled>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Código de Barras" [(ngModel)]="product.codigoBarras" name="codigoBarras">
+            <input matInput placeholder="Código de Barras" [(ngModel)]="product.codigoBarras" name="codigoBarras" disabled>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Marca" [(ngModel)]="product.marca" name="marca">
+            <input matInput placeholder="Marca" [(ngModel)]="product.marca" name="marca" disabled>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Unidade de Medida" [(ngModel)]="product.unidadeMedida" name="unidadeMedida">
+            <input matInput placeholder="Unidade de Medida" [(ngModel)]="product.unidadeMedida" name="unidadeMedida" disabled>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Ativo" [(ngModel)]="product.ativo" name="ativo">
+            <input matInput placeholder="Ativo" [(ngModel)]="product.ativo" name="ativo" disabled>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Data de Cadastro" [(ngModel)]="product.dataCadastro" name="dataCadastro">
+            <input matInput placeholder="Data de Cadastro" [(ngModel)]="product.dataCadastro" name="dataCadastro" disabled>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Data de Atualização" [(ngModel)]="product.dataAtualizacao" name="dataAtualizacao">
+            <input matInput placeholder="Data de Atualização" [(ngModel)]="product.dataAtualizacao" name="dataAtualizacao" disabled>
         </mat-form-field>
     </form>
 
