--- a/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
+++ b/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
@@ -24,10 +24,30 @@
         <td mat-cell *matCellDef="let row">{{row.fpgPrice | currency: 'BRL'}}</td>
       </ng-container>
       <!-- Name Column -->
+      <ng-container matColumnDef="taxaAdicional">
+        <th mat-header-cell *matHeaderCellDef>Taxa Adicional</th>
+        <td mat-cell *matCellDef="let row">{{row.taxaAdicional}}</td>
+      </ng-container>
+      <!-- Name Column -->
       <ng-container matColumnDef="fpgDescricao">
          <th mat-header-cell *matHeaderCellDef>Descrição</th>
           <td mat-cell *matCellDef="let row">{{row.fpgDescricao}}</td>
         </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="ativo">
+        <th mat-header-cell *matHeaderCellDef>Status Ativo</th>
+        <td mat-cell *matCellDef="let row">{{row.ativo}}</td>
+      </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="permiteParcelamento">
+        <th mat-header-cell *matHeaderCellDef>Está Permitido Parcelamento</th>
+        <td mat-cell *matCellDef="let row">{{row.permiteParcelamento}}</td>
+      </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="numeroMaximoParcelas">
+        <th mat-header-cell *matHeaderCellDef>Número Máximo Parcelas</th>
+        <td mat-cell *matCellDef="let row">{{row.numeroMaximoParcelas}}</td>
+      </ng-container>
 
       <!-- Action Column -->
       <ng-container matColumnDef="action">
