--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -4,13 +4,19 @@
         <a routerLink="/">
             <img class="logo" src="assets/img/logo-senai.png" alt="logo">
         </a>
+        
     </span>
     <span class="title-group">
         <a>
             <i class="material-icons">
                 dashboard
             </i>
-            Inicio
+            Inicial
+        </a>
+    </span>
+    <span class="title-group3">
+        <a routerLink="/">
+            <img class="logo" src="assets/img/LoveCity.png" alt="logo2">
         </a>
     </span>
 </mat-toolbar>
