--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -30,10 +30,9 @@
     <h2 class="title">Nossa Proposta !</h2>
     <p>
       Este sistema foi desenvolvido com o objetivo de conectar panificadoras, padarias e fornecedores de forma colaborativa. 
-      Acreditamos que a união e o compartilhamento de recursos pode alavancar novos negócios e fortalecer o mercado local.
-    </p>
-    <p>
-      A plataforma possibilita que novos padeiros e empreendedores do ramo possam encontrar apoio, inspiração e parcerias através de um ecossistema digital de colaboração.
+      Acreditamos que a união e o compartilhamento de recursos pode alavancar novos negócios e fortalecer o mercado local. A 
+      plataforma possibilita que novos padeiros e empreendedores do ramo possam encontrar apoio, inspiração e parcerias através
+       de um ecossistema digital de colaboração.
     </p>
   </mat-card>
 
