--- a/src/app/component/Pagamento/pagamento-create/pagamento-create.component.css
+++ b/src/app/component/Pagamento/pagamento-create/pagamento-create.component.css
@@ -1,3 +1,6 @@
+.fundo1{
+    background: linear-gradient(to bottom, rgb(0, 0, 0), #000000);
+}
 form{
     display: flex;
     flex-direction: column;
@@ -5,4 +8,7 @@ form{
 
 button{
     margin: 20px 15px 0px 0px;
-}
+    color: rgb(255, 255, 255);
+    font-family: 'Rockwell', Arial, sans-serif;
+    font-size: 26px;
+    background: linear-gradient(to bottom, rgb(0, 0, 0), #9e9e9e);}
