--- a/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
+++ b/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
@@ -53,12 +53,12 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Ações</th>                     
         <td mat-cell *matCellDef="let row">
-            <a routerLink="/formaPagamento/update/{{ row.proId }}" class="edit">
+            <a routerLink="/formaPagamento/update/{{ row.cliId }}" class="edit">
                 <i class="material-icons">
                     edit
                 </i>
             </a>
-            <a routerLink="/formaPagamento/delete/{{ row.proId }}" class="delete"> 
+            <a routerLink="/formaPagamento/delete/{{ row.cliId }}" class="delete"> 
                 <i class="material-icons">
                     delete
                 </i>
