--- a/src/app/component/cliente/cliente-read/cliente-read.component.html
+++ b/src/app/component/cliente/cliente-read/cliente-read.component.html
@@ -41,12 +41,12 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Ações</th>                     
         <td mat-cell *matCellDef="let row">
-            <a routerLink="/clientes/update/{{ row.proId }}" class="edit">
+            <a routerLink="/clientes/update/{{ row.cliId }}" class="edit">
                 <i class="material-icons">
                     edit
                 </i>
             </a>
-            <a routerLink="/clientes/delete/{{ row.proId }}" class="delete"> 
+            <a routerLink="/clientes/delete/{{ row.cliId }}" class="delete"> 
                 <i class="material-icons">
                     delete
                 </i>
