--- a/src/app/component/Pagamento/pagamento-create/pagamento-create.component.html
+++ b/src/app/component/Pagamento/pagamento-create/pagamento-create.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="fundo1">
     <mat-card-title>Registra Pagamento</mat-card-title>
     <form>
         <mat-form-field>
