--- a/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
+++ b/src/app/component/Pagamento/pagamento-read/pagamento-read.component.html
@@ -47,18 +47,22 @@
       <ng-container matColumnDef="numeroMaximoParcelas">
         <th mat-header-cell *matHeaderCellDef>Número Máximo Parcelas</th>
         <td mat-cell *matCellDef="let row">{{row.numeroMaximoParcelas}}</td>
-      </ng-container>
+      </ng-container> fpgId
 
-      <!-- Action Column -->
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Ações</th>                     
+        <!-- Cabeçalho da coluna de ações -->
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <!-- Célula com os ícones de editar e deletar -->                    
         <td mat-cell *matCellDef="let row">
-            <a routerLink="/formaPagamento/update/{{ row.cliId }}" class="edit">
+            <!-- Link que leva pra página de edição do produto com o ID correspondente -->
+            <a routerLink="/formaPagamento/update/{{ row.fpgId }}" class="edit">
                 <i class="material-icons">
                     edit
                 </i>
             </a>
-            <a routerLink="/formaPagamento/delete/{{ row.cliId }}" class="delete"> 
+            <!-- Link que leva pra página de exclusão do produto com o ID correspondente -->
+
+            <a routerLink="/formaPagamento/delete/{{ row.fpgId }}" class="delete">
                 <i class="material-icons">
                     delete
                 </i>
