--- a/src/app/component/product/product-create/product-create.component.html
+++ b/src/app/component/product/product-create/product-create.component.html
@@ -1,37 +1,37 @@
-<mat-card>
+<mat-card class="fundo1">
     <mat-card-title>Novo Produto</mat-card-title>
     <form>
-        <mat-form-field>
+        <mat-form-field appearance="fill">
             <input matInput placeholder="Nome" [(ngModel)]="product.proNome" name="name">
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.proPrecoCusto" name="price">
+        <mat-form-field appearance="fill">
+            <input matInput placeholder="Preço de Custo(R$)" [(ngModel)]="product.proPrecoCusto" name="price">
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.proPrecoVenda" name="price">
+        <mat-form-field appearance="fill">
+            <input matInput placeholder="Preço de Venda(R$)" [(ngModel)]="product.proPrecoVenda" name="price">
         </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.quantidadeEstoque" name="quantidadeEstoque">
+        <mat-form-field appearance="fill">
+            <input matInput placeholder="Quantidaade de Estoque" [(ngModel)]="product.quantidadeEstoque" name="quantidadeEstoque">
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field appearance="fill">
             <input matInput placeholder="Categoria" [(ngModel)]="product.categoria" name="categoria">
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field appearance="fill">
             <input matInput placeholder="Código de Barras" [(ngModel)]="product.codigoBarras" name="codigoBarras">
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field appearance="fill">
             <input matInput placeholder="Marca" [(ngModel)]="product.marca" name="marca">
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field appearance="fill">
             <input matInput placeholder="Unidade de Medida" [(ngModel)]="product.unidadeMedida" name="unidadeMedida">
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field appearance="fill">
             <input matInput placeholder="Ativo" [(ngModel)]="product.ativo" name="ativo">
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field appearance="fill">
             <input matInput placeholder="Data de Cadastro" [(ngModel)]="product.dataCadastro" name="dataCadastro">
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field appearance="fill">
             <input matInput placeholder="Data de Atualização" [(ngModel)]="product.dataAtualizacao" name="dataAtualizacao">
         </mat-form-field>
     </form>
