--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -1,8 +1,8 @@
 
 <mat-toolbar class="header" met-elevation-z4>
     <span class="title-group2">
-        <a routerLink="/">
-            <img class="logo" src="assets/img/logo-senai.png" alt="logo">
+        <a href="https://www.senaipr.org.br/">
+            <img class="logo" src="assets/img/logo-senai.png" alt="logo SENAI">
         </a>
         
     </span>
@@ -15,7 +15,7 @@
         </a>
     </span>
     <span class="title-group3">
-        <a routerLink="/">
+        <a>
             <img class="logo" src="assets/img/LoveCity.png" alt="logo2">
         </a>
     </span>
