--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -3,36 +3,29 @@
 
         <mat-nav-list class="nav-list">
             <a mat-list-item routerLink="/">
-                <i class="material-icons">
-                    home
-                </i>
-                Início
+              <i class="material-icons">home</i>
+              <span class="anima">Home</span>
             </a>
             <a mat-list-item routerLink="/clientes">
-                <i class="material-icons">
-                    groups
-                </i>
-                Clientes
+              <i class="material-icons">groups</i>
+              <span class="anima">Clientes</span>
             </a>
             <a mat-list-item routerLink="/products">
-                <i class="material-icons">
-                    storefront
-                </i>
-                Produtos
+              <i class="material-icons">storefront</i>
+              <span class="anima">Produtos</span>
             </a>
             <a mat-list-item routerLink="/fornecedores">
-                <i class="material-icons">
-                    folder_shared
-                </i>
-                Fornecedor
+              <i class="material-icons">folder_shared</i>
+              <span class="anima">Fornecedor</span>
             </a>
             <a mat-list-item routerLink="/formaPagamento">
-                <i class="material-icons">
-                    list_alt
-                </i>
-                Pagamentos
+              <i class="material-icons">list_alt</i>
+              <span class="anima">Pagamentos</span>
             </a>
-        </mat-nav-list>
+          </mat-nav-list>
+       <!--  <div class="sidenav-footer">
+        <img src="assets\img\lovekake.png" alt="Rodapé decorativo" class="footer-image">
+    </div> -->
 
     </mat-sidenav>
     <mat-sidenav-content class="content">
