--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -11,7 +11,7 @@
             <i class="material-icons">
                 dashboard
             </i>
-            Inicial
+            Tela Inicial
         </a>
     </span>
     <span class="title-group3">
