--- a/src/app/component/template/nav/nav.component.css
+++ b/src/app/component/template/nav/nav.component.css
@@ -7,6 +7,17 @@
     width: 200px;
 }
 
+.anima {
+  color: rgb(255, 255, 255);
+  transition: color 0.1s ease;
+}
+
+.anima:hover {
+  color: rgb(0, 0, 0);
+}
+
+
+
 .sidenav a{
     color: #fff;
 }
@@ -18,6 +29,27 @@
     padding: 16px;
     background-color: #fff;
 }
+.sidenav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; /* Isso centraliza horizontalmente tudo dentro */
+    height: 100vh; /* Garante altura total da tela 
+    padding-bottom: 10px;*/
+  }
+  
+  .sidenav-footer {
+    text-align: center;
+   /* width: 100%;  Opcional, ajuda em alguns layouts */
+  }
+  
+  .sidenav-footer img {
+    max-width: 190px;
+    height: auto;
+   /* opacity: 0.7;*/
+  }
+  
+
 /*.imagem-grande {
     width: 100%;
     max-width: 1000px;
