--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -1,7 +1,7 @@
 
 <mat-toolbar class="header" met-elevation-z4>
     <span class="title-group2">
-        <a href="https://www.senaipr.org.br/">
+        <a href="https://novo.sistemafiep.org.br/">
             <img class="logo" src="assets/img/logo-senai.png" alt="logo SENAI">
         </a>
         
