--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -44,11 +44,11 @@
     <td mat-cell *matCellDef="let row">{{row.categoria}}</td>
   </ng-container>
 
-  <!-- Name Column -->
+  <!-- Name Column 
   <ng-container matColumnDef="codigoBarras">
     <th mat-header-cell *matHeaderCellDef>Código Barras</th>
     <td mat-cell *matCellDef="let row">{{row.codigoBarras}}</td>
-  </ng-container>
+  </ng-container>-->
 
   <!-- Name Column -->
   <ng-container matColumnDef="marca">
@@ -56,11 +56,11 @@
     <td mat-cell *matCellDef="let row">{{row.marca}}</td>
   </ng-container>
   
-  <!-- Name Column -->
+  <!-- Name Column 
   <ng-container matColumnDef="unidadeMedida">
     <th mat-header-cell *matHeaderCellDef>Unidade de Medida</th>
     <td mat-cell *matCellDef="let row">{{row.unidadeMedida}}</td>
-  </ng-container>
+  </ng-container>-->
 
   <!-- Name Column -->
   <ng-container matColumnDef="ativo">
