--- a/src/app/component/Pagamento/pagamento-delete/pagamento-delete.component.html
+++ b/src/app/component/Pagamento/pagamento-delete/pagamento-delete.component.html
@@ -24,6 +24,7 @@
         </mat-form-field>
     </form>
 
+    <div style="gap: 10px;">
     <button mat-raised-button (click)="deletePagamento()" color="warn">
         Excluir
     </button>
@@ -31,5 +32,6 @@
     <button mat-raised-button (click)="cancel()">
         Cancelar
     </button>
+</div>
 
 </mat-card>
