--- a/src/app/component/Pagamento/pagamento-update/pagamento-update.component.html
+++ b/src/app/component/Pagamento/pagamento-update/pagamento-update.component.html
@@ -24,6 +24,7 @@
         </mat-form-field>
     </form>
 
+    <div style="gap: 10px;">
     <button mat-raised-button (click)="updatePagamento()" color="primary">
         Atualizar
     </button>
@@ -31,4 +32,6 @@
     <button mat-raised-button (click)="cancel()">
         Cancelar
     </button>
+</div>
+
 </mat-card>
