--- a/src/app/component/product/product-delete/product-delete.component.html
+++ b/src/app/component/product/product-delete/product-delete.component.html
@@ -36,6 +36,7 @@
         </mat-form-field>
     </form>
 
+    <div style="gap: 10px;">
     <button mat-raised-button (click)="deleteProduct()" color="warn">
         Excluir
     </button>
@@ -43,5 +44,6 @@
     <button mat-raised-button (click)="cancel()">
         Cancelar
     </button>
+</div>
 
 </mat-card>
