--- a/src/app/component/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.html
@@ -12,6 +12,7 @@
         </mat-form-field>
     </form>
 
+    <div style="gap: 10px;">
     <button mat-raised-button (click)="createCliente()" color="primary">
         Salvar
     </button>
@@ -19,5 +20,6 @@
     <button mat-raised-button (click)="cancel()">
         Cancelar
     </button>
+</div>
 
 </mat-card>
