--- a/src/app/component/product/product-update/product-update.component.html
+++ b/src/app/component/product/product-update/product-update.component.html
@@ -36,6 +36,7 @@
         </mat-form-field>
     </form>
 
+    <div style="gap: 10px;">
     <button mat-raised-button (click)="updateProduct()" color="primary">
         Atualizar
     </button>
@@ -43,4 +44,6 @@
     <button mat-raised-button (click)="cancel()">
         Cancelar
     </button>
+</div>
+
 </mat-card>
