--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -7,7 +7,7 @@
         
     </span>
     <span class="title-group">
-        <a>
+        <a href="app-inicial.component.html">
             <i class="material-icons">
                 dashboard
             </i>
