--- a/src/app/component/product/product-create/product-create.component.html
+++ b/src/app/component/product/product-create/product-create.component.html
@@ -1,6 +1,6 @@
 <mat-card class="fundo1">
     <div style="display:flex; justify-content:flex-end">
-    <mat-card-title>Novo Produto</mat-card-title>
+    <mat-card-title class="Nome">Novo Produto</mat-card-title>
     </div>
     <form>
         <mat-form-field appearance="fill">
