--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -1,3 +1,19 @@
+.proposta-localiza {
+  padding: 20px;
+  margin-top: 30px;
+  background: linear-gradient(to bottom, rgb(37, 34, 53), #0f1118);
+  border-radius: 20px;
+  border: 3px solid #420ed1;
+  box-shadow: 0 0 2px #420ed1, 0 0 4px #420ed1 inset;
+  color: white;
+}
+
+.map-container {
+  width: 100%;
+  height: 450px;
+  overflow: hidden;
+  border-radius: 15px;
+}
 /* Layout geral com flexível */
 .layout-container {
     display: flex;
@@ -7,6 +23,7 @@
     align-items: stretch;
     margin-top: 32px;
     box-sizing: border-box;
+    
   }
   
   /* Cards lado a lado, mas responsivos */
@@ -19,6 +36,10 @@
     justify-content: center;
     padding: 16px;
     min-height: 100%;
+    border-radius: 20px;
+    border: 3px solid #420ed1;
+    box-shadow: 0 0 2px #420ed1, 0 0 4px #420ed1 inset;
+    color: white;
   }
   
   /* Ajustes para telas menores */
@@ -77,12 +98,19 @@
   
   /* Cards grandes abaixo */
   .home3.proposta-site {
-    background: linear-gradient(to right, #030e2b, #081b36, #66a6ff);
+    /*background: linear-gradient(to right, #030e2b, #081b36, #66a6ff);*/
     color: white;
     margin-top: 32px;
     padding: 24px;
     width: 100%;
     box-sizing: border-box;
+    padding: 20px;
+    margin-top: 30px;
+    background: linear-gradient(to bottom, rgb(37, 34, 53), #0f1118);
+    border-radius: 20px;
+    border: 2px solid #420ed1;
+    box-shadow: 0 0 2px #420ed1, 0 0 4px #420ed1 inset;
+    color: white;
   }
   
   /* Texto explicativo */
