--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -34,9 +34,6 @@
       plataforma possibilita que novos padeiros e empreendedores do ramo possam encontrar apoio, inspiração e parcerias através
        de um ecossistema digital de colaboração.
     </p>
-  </mat-card>
-
-  <mat-card class="home3 mat-elevation-z3 proposta-site">
     <h2 class="title">O que é o Desktop do nosso Sistema?</h2>
     <p>
       O desktop do sistema representa a interface principal de trabalho utilizada em computadores de balcão, administrativos ou caixas das padarias e panificadoras.
@@ -45,4 +42,24 @@
       de uma plataforma colaborativa maior, que conecta padarias, fornecedores e novos empreendedores em um ecossistema digital de crescimento coletivo.
     </p>
   </mat-card>
+
+  <mat-card class="home3 mat-elevation-z3 proposta-localiza">
+    <h1 class="title"> Localização !</h1>
+    <div class="map-container">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1127.2068584955489!2d-51.16020633037877!3d-23.30425826699252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb43607668842f%3A0x5386508dbb20b0b4!2sSENAI%20-%20Londrina!5e1!3m2!1spt-BR!2sbr!4v1749665558307!5m2!1spt-BR!2sbr"
+        width="100%" 
+        height="350" 
+        style="border:0; border-radius: 15px;
+        border: 3px solid #420ed1;
+        box-shadow: 0 0 2px #420ed1, 0 0 4px #420ed1 inset;
+        color: white;" 
+        allowfullscreen="" 
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+      
+    </div>
+  </mat-card>
+  
   
